# time_at_enklave

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  config.hpp  enklave.hpp  main.cpp
tests/: enklave_tests.cpp  has_filesystem.cc
tests/data/: testfile_check_in.eml  testfile_check_in2.eml  testfile_check_in_01_impossible_01.eml  testfile_check_in_01_impossible_02.eml  testfile_check_in_02.eml  testfile_check_out.eml  testfile_check_out_01_impossible_01.eml  testfile_check_out_02.eml  testfile_check_out_02_impossible_01.eml  testfile_check_out_02_impossible_02.eml  testfile_enklave_other.eml
unused/: 01.eml  02.eml  CMFapRGdW7Xkzsp_n5c8bMD3NRBYXAALrHZDAOhqdLIwpEctwWIdRpDhugRopWHM2wRAwovyEVNhco6_kMjDFA==.eml  Confirmation_   Check out 2019-07-17T19_17_20+02_00.eml  Confirmation_   Check out 2019-08-26T15_57_12+02_00.eml  Confirmation_  Check in 2019-07-17T16_23_56+02_00.eml  Confirmation_  Check in 2019-08-26T10_57_35+02_00.eml
